--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,13 @@
 body {
+  background-color: rgb(142, 190, 172);
+  padding: 5px;
+  border: 1px solid #044d0f;
+  border-radius: 30px;
   font-family: arial, sans-serif;
 }
 
 h1 {
-  color: #878787;
+  color: #0c0b0b;
   font-size: 24px;
   font-weight: 100;
   line-height: 28px;
@@ -20,10 +24,8 @@ li {
   margin: 0;
   padding: 0;
   text-transform: capitalize;
-
-  color: rgb(135, 135, 135);
+  color: rgb(15, 15, 15);
   font-size: 16px;
-  font-weight: 100;
   line-height: 19px;
 }
 
@@ -34,12 +36,6 @@ li:first-letter {
 .weather-app-wrapper {
   max-width: 600px;
   margin: 30px auto;
-}
-
-.weather-app {
-  padding: 20px;
-  border: 1px solid #dadde1;
-  border-radius: 5px;
 }
 
 .overview {
@@ -56,7 +52,6 @@ li:first-letter {
   color: rgb(33, 33, 33);
   font-size: 64px;
   line-height: 1;
-  font-weight: 400;
 }
 
 .weather-temperature .units {
@@ -66,10 +61,28 @@ li:first-letter {
 }
 
 .weather-temperature .active {
-  color: rgb(33, 33, 33);
+  color: rgb(15, 15, 15);
   cursor: default;
 }
 
 .weather-temperature .active:hover {
   text-decoration: none;
+}
+
+.weather-forecast {
+  margin-top: 20px;
+  text-align: center;
+}
+
+.weather-forecast-date {
+  font-size: 16px;
+  opacity: 0.5;
+}
+
+.weather-forecast-temperature-min {
+  opacity: 0.5;
+}
+
+.weather-forecast-temperature {
+  font-size: 13px;
 }
