--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 h1 {
-  color: #0c0b0b;
+  color: #033608;
   font-size: 24px;
   font-weight: 100;
   line-height: 28px;
@@ -24,7 +24,7 @@ li {
   margin: 0;
   padding: 0;
   text-transform: capitalize;
-  color: rgb(15, 15, 15);
+  color: rgb(4, 54, 27);
   font-size: 16px;
   line-height: 19px;
 }
@@ -49,7 +49,7 @@ li:first-letter {
 }
 
 .weather-temperature strong {
-  color: rgb(33, 33, 33);
+  color: rgb(3, 53, 10);
   font-size: 64px;
   line-height: 1;
 }
@@ -61,7 +61,7 @@ li:first-letter {
 }
 
 .weather-temperature .active {
-  color: rgb(15, 15, 15);
+  color: rgb(3, 61, 20);
   cursor: default;
 }
 
